--- a/nextHour/css/layout.css
+++ b/nextHour/css/layout.css
@@ -35,7 +35,7 @@ pre {
 }
 .good-information1{
     background: url("../images/222_02.jpg") no-repeat center #000;
-    height: 1126px;
+    height: 1326px;
     position: relative;
     z-index: 2;
     width: 100%;
@@ -80,6 +80,7 @@ pre {
     background: url("../images/222_08.jpg") no-repeat center;
     height: 906px;
     z-index: 2;
+    margin-top: -1px;
     width: 100%;
     position: relative;
 }
