--- a/site/css/base.css
+++ b/site/css/base.css
@@ -236,14 +236,19 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
     border-radius: 0.416666rem;
     margin-top: 1rem;
 }
+.m-underline-d0d0d0{
+    border-bottom: 0.1rem solid #d0d0d0;
+}
 .m-input{
     height: 2rem;
+    background-color: transparent;
     line-height: 2rem;
     border: none;
     padding-left: 0.6rem;
     border-radius: 0.416666rem;
     padding-top:0.6rem;
     padding-bottom:0.6rem;
+    width:100%
 }
 .m-input-border{
     border:0.1rem solid #d0d0d0;
@@ -251,6 +256,7 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
 /* 提示信息样式  */
 .tips-error{
     color: red;
+    margin-left: 7.3rem ;
     padding-left: 0.6rem;
     margin-top: 0.2rem;
     font-size: 1rem;
