--- a/newIndex/global/styles/base.css
+++ b/newIndex/global/styles/base.css
@@ -293,7 +293,17 @@ body.specs #main { font-size: 11px; line-height: 16px; }
 /* PRODUCTHEADER */
 
 /* BUTTONS - (U.S.) */
-
+.button{
+    height: 45px;
+    width: 170px;
+    background-color: #c7000b;
+    border-radius: 5px;
+    text-align: center;
+    color: #fff;
+}
+.button-content{
+    line-height: 45px;
+}
 
 /* promofooter */
 #promofooter { width:984px; margin:18px auto 0; padding-top:17px; background:url(http://images.apple.com/promos/images/promofooter_top.png) no-repeat; zoom:1; _background-image:url(http://images.apple.com/promos/images/promofooter_top.gif); }
