--- a/newIndex/home/styles/billboard.css
+++ b/newIndex/home/styles/billboard.css
@@ -25,13 +25,31 @@
 #billboard .powerful #pagenavi{
     z-index: 999;
     position: absolute;
-    bottom: 6px;
-    width: 100px;
+    bottom: 20px;
+    width: 150px;
     text-align: center;
+    height: 10px;
     left: 50%;
-    margin-left: -50px;
+    margin-left: -75px;
 }
-#billboard .powerful #pagenavi a.active{color: red}
+
+#billboard .powerful .detail{
+    width: 450px;
+    position: absolute;
+    top: 50px;
+    right: 248px;
+}
+#billboard .powerful .detail .detail-img{
+    background:url("../../images/3_01.png") center top no-repeat;
+    width: 450px;
+    height: 390px;
+}
+#billboard .powerful #pagenavi a.active{
+    background: url("../../images/dot_full.png") center top no-repeat !important;
+    background-size: 10px 10px;
+    display: inline-block;
+    height: 10px;
+    width: 10px;}
 #billboard .powerful ul li {height: 100%}
 
 #billboard .gallery { position:absolute; top:0; right:0; bottom:0; left:0; }
