--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -29,13 +29,16 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 
 
 /* promos */
-.promos { position:absolute; z-index:1; bottom:244px; overflow:hidden; width:100%; height:200px; }
+.promos { position:absolute; z-index:1; bottom:246px; overflow:hidden; width:100%; height:200px; }
 .promos ul { position:relative; z-index:1; overflow:hidden; margin:0 auto; min-width:1024px; width:100%; max-width:1440px; height:200px; text-align:center; }
 .promos ul li { position:relative; z-index:1; float:left; overflow:hidden; margin:0; width:25%; height:200px; }
 .promos ul li + li + li + li { margin-right:-.3%; *margin-right:-.5%; width:25.3%; }
 
 .promos ul li a { position:absolute; z-index:1; top:0; right:0; bottom:0; left:0; display:block; overflow:hidden; cursor:pointer; }
-.promos ul li + li a { border-left:4px solid #977655; }
+.promos ul li a:hover {
+    opacity: 0.8;
+}
+.promos ul li + li a { border-left:2px solid #977655; }
 
 .promos ul li a img { position:absolute; z-index:1; left:50%; margin-left:-182px; }
 .promos ul li .title{font-weight: bold; text-shadow: 1px 1px 1px #000; color: #fff; position: absolute; z-index: 2; text-align: center; width: 100%; font-size: 14px; height: 48px; line-height: 48px; bottom: 0; }
@@ -59,7 +62,7 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     width: 1440px;
     background-color: rgba(151,118,85,0.3);
     height: 39px;
-    z-index: 1111;
+    z-index: 990;
     position: absolute;
     left: 50%;
     margin-left: -720px;
@@ -77,7 +80,7 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     height: 158px;
     width: 115px;
     position: absolute;
-    z-index: 9999;
+    z-index: 999;
 }
 #homenav .banner .title{
     background:url("../../images/zhongguodao.png") center top no-repeat;
@@ -123,8 +126,8 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 }
 
 /* homefooter */
-#homefooter { position:absolute; z-index:1; right:0; bottom:0; left:0; margin:0; min-width:980px; width:100%;background-color: #333333; height: 240px; padding:0; color:#aaaaaa; font-size:.8334em; line-height:1.2; text-align:center; zoom:1; }
-#homefooter .wrapper { margin:0 auto; width:980px; padding:1em 0 2.6em; }
+#homefooter { position:absolute; z-index:1; right:0; bottom:0; left:0; margin:0; min-width:980px; width:100%;background-color: #333333; height: 244px; padding:0; color:#aaaaaa; font-size:.8334em; line-height:1.2; text-align:center; zoom:1; }
+#homefooter .wrapper { margin:0 auto; width:980px; padding: 16em 0 0; }
 #homefooter .wrapper .bottom {border-bottom: 1px solid #4f4f4f;
     position: absolute;
     top: 191px;
@@ -133,9 +136,32 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 #homefooter .wrapper:after { content:'.'; display:block; visibility:hidden; clear:both; height:0; }
 
 #homefooter .left { float:left; clear:both; width:49%; padding-top:1.5em; text-align:left; }
-#homefooter .right { float:right; width:51%; padding-top:1.5em; text-align:right; }
+#homefooter .right { float:right; width:auto; padding-top:1.5em; text-align:right; }
 
 #homefooter p,
-#homefooter ul,
-#homefooter ul li { display:inline; margin:0; }
+#homefooter .wrapper ul,
+#homefooter .wrapper ul li { display:inline; margin:0; }
+
+#homefooter dl {
+    width: 15%;
+    float: left;
+    margin-top: 15px;
+}
+#homefooter ul li{
+    margin-top: 15px;
+}
+#homefooter dl dt{
+    color: #fff;
+    padding-top: 10px;
+    font-weight: bold;
+}
+#homefooter dl dd{
+    margin-top: 15px;
+    color: #aaaaaa;
+}
+#homefooter>div:first-child{
+    max-width: 1440px;
+    width: auto;
+    margin:0 auto;
+}
 
