--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -165,3 +165,10 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     margin:0 auto;
 }
 
+@-moz-document url-prefix() {
+    #homefooter dl {
+        width: 15%;
+        float: left;
+        margin-top: 28px;
+    }
+}
