--- a/newIndex/global/styles/base.css
+++ b/newIndex/global/styles/base.css
@@ -106,9 +106,9 @@ p.last, ul.last, ol.last, li.last { _width: auto !important; _float: none !impor
 #container, #content, .grid2col, .grid2cola, .grid2colb, .grid2colc, .grid2cold, .grid2cole, .grid2colf, .grid3col, .grid3cola, .grid4col, .grid5col, .grid6col { zoom: 1; }
 
 /* TYPE */
-body { font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif; background-color: transparent; color: #333; -webkit-font-smoothing: antialiased; }
+body { font: 12px/18px "Microsoft Yahei", "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif; background-color: transparent; color: #333; -webkit-font-smoothing: antialiased; }
 
-a { color: #fff; }
+a { color: #aaa; }
 a:link, a:visited, a:active { text-decoration: none; }
 a:hover { text-decoration: underline; }
 a.block { display: block; cursor: pointer; }
@@ -163,16 +163,6 @@ ul ul.square,
 ul ul.circle,
 ul ul.disc { margin-top: 4px; margin-bottom: 5px; }
 ol.sosumi { margin-left: 0; padding-left: 2em; *padding-left: 2.2em; }
-
-a.pdf { background: url(http://images.apple.com/global/elements/icons/globaliconpdf12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.html { background: url(http://images.apple.com/global/elements/icons/globaliconhtml12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.qt { background: url(http://images.apple.com/global/elements/icons/globaliconqt12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.ical { background: url(http://images.apple.com/global/elements/icons/globaliconical12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.dl { background: url(http://images.apple.com/global/elements/icons/globalicondl11x10.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.dmg { background: url(http://images.apple.com/global/elements/icons/globalicondmg12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.zip { background: url(http://images.apple.com/global/elements/icons/globaliconzip12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.keynote { background: url(http://images.apple.com/global/elements/icons/globaliconkeynote12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
-a.audio { background: url(http://images.apple.com/global/elements/icons/globaliconaudio12x12.gif) 0 0.4em no-repeat; display: block; padding-left: 20px; }
 
 .dot-nav { width:100%; margin:0; padding:0; text-align:center; line-height:1px; }
 .dot-nav li,
@@ -271,27 +261,6 @@ body.specs #main { font-size: 11px; line-height: 16px; }
 #directorynav.iphone .column,
 #directorynav.itunes .column { width: 190px; padding: 9px 0 0 54px; }
 
-/*--- BREADORY ---*/
-#breadory { border: 1px solid #ddd; width: 978px; margin: 0 auto; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
-#globalfooter #breadory ol#breadcrumbs { background: none; clear: both; float: none; height: 3em; line-height: 3em; font-size: 11px; color: #666; margin: 0; list-style: none; font-weight: bold; text-shadow: 0 1px 0 #fff; }
-#breadory ol#breadcrumbs li { background: none; float: left; margin: 0; padding: 0 0 0 1em; }
-#breadory ol#breadcrumbs li a { float: left; color: #666; text-decoration: none; padding: 0 1.75em 0 0; margin-left: 0px; background: url(http://images.apple.com/global/elements/breadory/breadcrumb_separator.png) no-repeat 100% 50%; }
-#breadory ol#breadcrumbs li a:hover { color: #333; text-decoration: none; }
-#breadory ol#breadcrumbs li.home { background: none; margin: 0; padding: 0; }
-#breadory ol#breadcrumbs li.home a { background: url(http://images.apple.com/global/elements/breadory/breadcrumb_home.png) no-repeat 1.25em 50%; margin: 0; padding: 0 0 0 1.25em; width: 30px; text-indent: -9999px; overflow: hidden; }
-#breadory ol#breadcrumbs li.home a:hover { background-image: url(http://images.apple.com/global/elements/breadory/breadcrumb_home_over.png); }
-
-@media only screen {
-    #breadory ol#breadcrumbs li a { background-image:url(./../elements/breadory/breadcrumb_separator.svg); }
-    #breadory ol#breadcrumbs li.home a { background-image:url(./../elements/breadory/breadcrumb_home.svg); }
-    #breadory ol#breadcrumbs li.home a:hover { background-image:url(./../elements/breadory/breadcrumb_home_over.svg); }
-}
-
-#breadory #directorynav { background: none; clear: both; float: none; margin-top: 0; }
-#breadory #directorynav .capbottom { height: 0; font-size: 1px; _display: none; }
-
-/* PRODUCTHEADER */
-
 /* BUTTONS - (U.S.) */
 .button{
     height: 45px;
@@ -310,42 +279,6 @@ body.specs #main { font-size: 11px; line-height: 16px; }
 .button:active{
     background-color: #f10310;
 }
-/* promofooter */
-#promofooter { width:984px; margin:18px auto 0; padding-top:17px; background:url(http://images.apple.com/promos/images/promofooter_top.png) no-repeat; zoom:1; _background-image:url(http://images.apple.com/promos/images/promofooter_top.gif); }
-#promofooter #promos { width:980px; margin-bottom:0; padding:0 2px 4px; background:url(http://images.apple.com/promos/images/promofooter_bottom.png) no-repeat 0 100%; zoom:1; _background-image:url(http://images.apple.com/promos/images/promofooter_bottom.gif); }
-#promofooter #promos:after { content:'.'; display:block; height:0; clear:both; visibility:hidden; }
-#promofooter #promos li.promo { position:relative; float:left; width:244px; min-height:15em; _height:15em; padding-right:1px; margin-top:-16px; }
-#promofooter #promos li.promo a { color:#777; }
-#promofooter #promos li.promo:hover a { color:#08c; text-decoration:none; }
-
-#promofooter #promos img { display:block; }
-
-#promofooter #promos h4 a,
-#promofooter #promos p a,
-#promofooter #promos ul { display:block; padding-left:15px; padding-right:12px; text-align:left; z-index:101; *position:relative; }
-
-#promofooter #promos h4 a { font-size:18px; font-weight:normal; padding-top:15px; }
-#promofooter #promos p { margin-bottom:0; }
-#promofooter #promos p a { font-size:11px; line-height:16px; }
-#promofooter #promos a.image { height:180px; position:absolute; bottom:0; z-index:100; }
-
-#promofooter #promos .promo.left p a { width:110px; }
-#promofooter #promos .promo.right p a { width:112px; padding-left:116px; }
-#promofooter #promos .promo.center p a { text-align:center; }
-
-#promofooter #promos li.buy { position:relative; float:left; width:244px; padding-right:1px; margin-top:-17px; color:#777; }
-#promofooter #promos li.buy ul { font-size:11px; line-height:1.4; }
-
-#promofooter.grid2col { min-height: 70px; padding:15px 0 8px 0;  border: 1px solid #D2D2D2; }
-#promofooter.grid2col { background:#fff;
-    background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#e5e5e5));
-    background:-moz-linear-gradient(100% 100% 90deg, #e5e5e5, #fff);
-    filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FFFFFF', endColorstr='#e5e5e5');
-}
-#promofooter.grid2col #promos { background: none;}
-#promofooter.grid2col #promos li.promo { width: 47%; min-height: 70px; margin-bottom: -10px; }
-#promofooter.grid2col #promos li.promo.first { border-right: 1px solid #e8e8e8; }
-#promofooter.grid2col li.promo { padding:20px; }
 
 /* PRINT */
 @media print {
