--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -29,7 +29,7 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 
 
 /* promos */
-.promos { position:absolute; z-index:1; bottom:246px; overflow:hidden; width:100%; height:200px; }
+.promos { z-index:1; overflow:hidden; width:100%; height:200px; margin-top: -3px;}
 .promos ul { position:relative; z-index:1; overflow:hidden; margin:0 auto; min-width:1024px; width:100%; max-width:1440px; height:200px; text-align:center; }
 .promos ul li { position:relative; z-index:1; float:left; overflow:hidden; margin:0; width:25%; height:200px; }
 .promos ul li + li + li + li { margin-right:-.3%; *margin-right:-.5%; width:25.3%; }
@@ -130,13 +130,11 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 }
 
 /* homefooter */
-#homefooter { position:absolute; z-index:1; right:0; bottom:0; left:0; margin:0; min-width:980px; width:100%;background-color: #333333; height: 244px; padding:0; color:#aaaaaa; font-size: 12px; line-height:1.2; text-align:center; zoom:1; }
-#homefooter .wrapper { margin:0 auto; width:980px; padding: 16em 0 0; }
+#homefooter {margin-top:2px;  z-index:1; right:0; min-width:980px; width:100%; background-color: #333333; height: 244px; padding:0; color:#aaaaaa; font-size: 12px; line-height:1.2; text-align:center; zoom:1; }
+#homefooter .wrapper { margin:0 auto; width:980px;}
 #homefooter .wrapper .bottom {border-bottom: 1px solid #4f4f4f;
-    position: absolute;
-    top: 198px;
     width: 100%;
-    left: 0;}
+    }
 #homefooter .wrapper:after { content:'.'; display:block; visibility:hidden; clear:both; height:0; }
 
 #homefooter .left { float:left; clear:both; width:49%; padding-top:1.5em; text-align:left; }
@@ -146,6 +144,10 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 #homefooter .wrapper ul,
 #homefooter .wrapper ul li { display:inline; margin:0; }
 
+#homefooter .bottom{
+    border-bottom: 1px solid #4f4f4f;
+    margin-top:5px;
+}
 #homefooter dl {
     width: 15%;
     float: left;
@@ -154,6 +156,9 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 }
 #homefooter dl:first-child{
     margin-left: 100px;
+}
+#homefooter dl:first-child > dd{
+    margin-top: 124px;
 }
 #homefooter ul li{
     margin-top: 15px;
@@ -172,6 +177,48 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     width: auto;
     margin:0 auto;
 }
+
+
+
+#billboard { min-width: 960px;
+    max-width: 1440px;
+    width: auto;
+    margin: 0 auto;
+    position: relative;
+}
+#billboard .purchase{
+    width: 1004px;
+    height: 1px;
+    margin: 0 auto;
+    left: 50%;
+    top: 0;
+    position: absolute;
+    margin-left: -502px;
+}
+#billboard .purchase .detail{
+    position: absolute;
+    right: 10px;
+    top:49px
+}
+#billboard .purchase .detail .detail-img{
+    background: url("../../images/3_01.png") center top no-repeat;
+    height: 384px;
+    width: 472px;
+}
+#pagenavi{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    margin-left: -70px;
+}
+#pagenavi a.active{
+    background: url("../../images/dot_full.png") center top no-repeat !important;
+    background-size: 10px 10px;
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+}
+
 
 @-moz-document url-prefix() {
     #homefooter dl {
