--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -1,5 +1,5 @@
 html, body { position:relative; z-index:1; min-width:1024px; height:100%; background:#89725c;}
-body { min-height:1103px; *height:865px; /* max-height:1472px; */}
+body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px; */}
 
 #globalheader { z-index:9998; top:18px; margin:0 auto; }
 
@@ -90,6 +90,13 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     height: 53px;
     margin-left: 460px;
 }
+#homenav .banner .title:hover{
+    background:url("../../images/zhongguodao-red.png") center top no-repeat;
+    display: inline-block;
+    width: 74px;
+    height: 53px;
+    margin-left: 460px;
+}
 #nav_wrapper {
     display: inline-block;
     float: right;
@@ -107,8 +114,9 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
     display: inline-block;
     text-align: center;
 }
-#nav_wrapper #nav_menu a:hover{
+#nav_wrapper #nav_menu>li >a:hover{
     text-decoration: none;
+    border-bottom: 3px solid #c7000b;
 }
 #nav_animate_block{
     height: 4px ;
@@ -188,6 +196,7 @@ body { min-height:1103px; *height:865px; /* max-height:1472px; */}
 #nav_wrapper ul li a,ul li span,ul li span a{display:block;width:125px;}
 #nav_wrapper ul li>a{color:#000;}
 #nav_wrapper ul li span{display:none;position:absolute;top:30px; width: 82px;
+    border-top: 3px solid #c7000b;
     background: #d9c6ae;
     height: 67px;}
 #nav_wrapper ul li:hover span{display:block;}
