--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -60,13 +60,12 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
     margin: 0 auto;
 }
 .second-banner{
-    width: 1440px;
     background-color: rgba(151,118,85,0.3);
     height: 39px;
     z-index: 3;
     position: absolute;
-    left: 50%;
-    margin-left: -720px;
+    left: 0;
+    right: 0;
 }
 .banner img { display:block; margin:0 auto; }
 
