--- a/site/css/m-cart.css
+++ b/site/css/m-cart.css
@@ -320,7 +320,7 @@
 }
 
 
-/*m-center.css*/
+/*m-center.styles*/
 .m-center-banner{
     background: url("../image/1-2.jpg") center no-repeat;
     height: 17rem;
