--- a/newIndex/loginregister/styles/register.css
+++ b/newIndex/loginregister/styles/register.css
@@ -29,3 +29,28 @@
 .register-title-position{
     margin-top: 144px;
 }
+.register-enter{
+    border-top:1px dotted #4c4b4b;
+    margin-top: 140px;
+}
+.register-no-count{
+    font-size: 12px;
+    color: #a4a4a4;
+    margin:20px 0 20px 0;
+}
+.error-father{
+    position: relative;
+}
+.error-tips{
+    background: url("../../images/error-bg.png") center top no-repeat;
+    width: 262px;
+    position: absolute;
+    height: 80px;
+    top: 5px;
+    left: -266px;
+    color: #fff;
+}
+.error-content{
+    margin-left: 20px;
+    margin-top:  10px;
+}
