--- a/newIndex/loginregister/styles/register.css
+++ b/newIndex/loginregister/styles/register.css
@@ -1,6 +1,7 @@
 .register-wrap{
     background:url("../images/bg.jpg") center top no-repeat;
     background-size: cover;
+    min-height: 800px;
     height: 100%;
 }
 .register-content{
@@ -65,4 +66,13 @@
     display: inline-block;
     vertical-align: middle;
     margin-top: -4px;
+}
+.login-auto{
+    color: #fff;
+    margin-top: 10px;
+}
+.login-auto input{
+    vertical-align: middle;
+    margin-top: -2px;
+    margin-right:3px
 }
