--- a/newIndex/zhongguodao/styles/zhongguodao.css
+++ b/newIndex/zhongguodao/styles/zhongguodao.css
@@ -1,86 +1,86 @@
 .good-information1 {
-    background: url("../../images/222_02.jpg") no-repeat center #000;
-    height: 1326px;
+    background: url("../../img/2222_01.jpg") no-repeat center #000;
+    height: 1162px;
     position: relative;
     z-index: 2;
     width: 100%;
 }
 .good-information2{
-    background: url("../../images/222_03.jpg") no-repeat center #000;
+    background: url("../../img/2222_02.jpg") no-repeat center #000;
     position: relative;
-    height: 906px;
+    height: 1162px;
     z-index: 2;
     width: 100%;
 }
 .good-information3{
-    background: url("../../images/222_04.jpg") no-repeat center;
+    background: url("../../img/2222_03.jpg") no-repeat center;
     position: relative;
-    height: 906px;
+    height: 1162px;
     z-index: 2;
     width: 100%;
 }
 .good-information4{
-    background: url("../../images/222_05.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_04.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     position: relative;
     width: 100%;
 }
 .good-information5{
-    background: url("../../images/222_06.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_05.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     position: relative;
     width: 100%;
 }
 .good-information6{
-    background: url("../../images/222_07.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_06.jpg") no-repeat center;
+    height: 1162px;
     margin-top:-1px;
     z-index: 2;
     position: relative;
     width: 100%;
 }
 .good-information7{
-    background: url("../../images/222_08.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_07.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     margin-top: -1px;
     width: 100%;
     position: relative;
 }
 .good-information8{
-    background: url("../../images/222_09.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_08.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     width: 100%;
     position: relative;
 }
 .good-information9{
-    background: url("../../images/222_10.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_09.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     margin-top:-1px;
     width: 100%;
     position: relative;
 }
 .good-information10{
-    background: url("../../images/222_11.jpg") no-repeat center;
-    height: 906px;
+    background: url("../../img/2222_10.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     width: 100%;
     position: relative;
 }
 .good-information11{
-    background: url("../../images/222_12.jpg") no-repeat center;
-    height: 1049px;
+    background: url("../../img/2222_11.jpg") no-repeat center;
+    height: 1162px;
     z-index: 2;
     position: relative;
     width: 100%;
 }
 .good-information12{
-    background: url("../../images/222_13.jpg") no-repeat center;
-    height: 2092px;
+    background: url("../../img/2222_12.jpg") no-repeat center;
+    height: 807px;
     z-index: 2;
     width: 100%;
     margin-top:-1px;
@@ -116,10 +116,43 @@
 }
 .watch-tv{
     position: absolute;
-    top: 450px;
+    top: 359px;
     width: 200px;
     left: 50%;
     text-align: center;
     font-size: 17px;
     margin-left: -100px;
+}
+.shape{
+    position: absolute;
+    top: 430px;
+    width: 200px;
+    left: 50%;
+    text-align: center;
+    font-size: 17px;
+    margin-left: -100px;
+}
+.dashi{
+    position: absolute;
+    top: 857px;
+    width: 200px;
+    left: 50%;
+    text-align: center;
+    font-size: 17px;
+    margin-left: -100px;
+}
+.zuofang{
+    position: absolute;
+    bottom:9px;
+    width: 200px;
+    left: 50%;
+    text-align: center;
+    font-size: 17px;
+    margin-left: -100px;
+}
+.zhongguodao-purchase{
+    position: absolute;
+    top: 270px;
+    left: 50%;
+    margin-left:-45px;
 }
