--- a/newIndex/mall/styles/cart.css
+++ b/newIndex/mall/styles/cart.css
@@ -161,6 +161,14 @@ label.address-label{color: grey;
     background-color: #f9f9f9;
     padding: 7px 5px;
 }
+.area-input{
+    width: 315px;
+    padding: 5px;
+    border: 1px solid #e6e6e6;
+    background-color: #f9f9f9;
+    vertical-align: middle;
+    font-size: 13px;
+}
 .simuselect {
     position: relative;
     background-color: #f9f9f9;
@@ -204,12 +212,15 @@ label.address-label{color: grey;
 .order-detail>div>span{
     color: #333;
     width: 78px;
+    font-weight: bold;
     display: inline-block;
 }
+.order-detail>div{
+    width: 666px;
+}
 .submit-gou{
-    height: 50px;
-    width: 50px;
-    line-height: 50px;
+    width: 26px;
+    padding: 12px;
     text-align: center;
     color: #fff;
     font-size: 20px;
