--- a/newIndex/home/styles/home.css
+++ b/newIndex/home/styles/home.css
@@ -29,7 +29,7 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
 
 
 /* promos */
-.promos { z-index:1; overflow:hidden; width:100%; height:200px; margin-top: -3px;}
+.promos { z-index:1; overflow:hidden; width:100%; height:200px; margin-top: 2px;}
 .promos ul { position:relative; z-index:1; overflow:hidden; margin:0 auto; min-width:1024px; width:100%; max-width:1440px; height:200px; text-align:center; }
 .promos ul li { position:relative; z-index:1; float:left; overflow:hidden; margin:0; width:25%; height:200px; }
 .promos ul li + li + li + li { margin-right:-.3%; *margin-right:-.5%; width:25.3%; }
@@ -68,6 +68,33 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
     right: 0;
 }
 .banner img { display:block; margin:0 auto; }
+
+.index-banner-1{
+    background: url("../../images/banner_01.jpg") center top no-repeat;
+    width: 1440px;
+    height: 600px;
+}
+.index-banner-2{
+    background: url("../../images/banner_02.jpg") center top no-repeat;
+    width: 1440px;
+    height: 600px;
+}
+.index-banner-3{
+    background: url("../../images/banner_03.jpg") center top no-repeat;
+    width: 1440px;
+    height: 600px;
+}
+.index-banner-4{
+    background: url("../../images/banner_04.jpg") center top no-repeat;
+    width: 1440px;
+    height: 600px;
+}
+.index-banner-5{
+    background: url("../../images/banner_05.jpg") center top no-repeat;
+    width: 1440px;
+    height: 600px;
+}
+
 
 /* homenav */
 #homenav{
@@ -134,7 +161,7 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
 
 .get-more{
     font-size: 18px;
-    color: #b8b8b8;
+    color: #fff;
     text-align: center;
     margin-top: 20px;
 }
@@ -211,11 +238,11 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
 }
 #billboard .purchase{
     width: 1004px;
-    height: 1px;
+    height: 600px;
     margin: 0 auto;
     left: 50%;
     top: 0;
-    position: absolute;
+    position: relative;
     margin-left: -502px;
 }
 #billboard .purchase .detail{
@@ -223,14 +250,39 @@ body { min-height:1103px; *height:865px; overflow-x:hidden;/* max-height:1472px;
     right: 10px;
     top:49px
 }
-#billboard .purchase .detail .detail-img{
+#billboard .purchase .detail .detail-img-1{
     background: url("../../images/3_01.png") center top no-repeat;
-    height: 384px;
-    width: 472px;
+    height: 205px;
+    width: 328px;
+    margin-top: 130px;
+}
+#billboard .purchase .detail .detail-img-2{
+    background: url("../../images/3_02.png") center top no-repeat;
+    height: 200px;
+    width: 400px;
+    margin-top: 130px;
+}
+#billboard .purchase .detail .detail-img-3{
+    background: url("../../images/3_03.png") center top no-repeat;
+    height: 258px;
+    width: 300px;
+    margin-top: 130px;
+}
+#billboard .purchase .detail .detail-img-4{
+    background: url("../../images/3_04.png") center top no-repeat;
+    height: 257px;
+    width: 362px;
+    margin-top: 160px;
+}
+#billboard .purchase .detail .detail-img-5{
+    background: url("../../images/3_05.png") center top no-repeat;
+    height: 283px;
+    width: 392px;
+    margin-top: 100px;
 }
 #pagenavi{
     position: absolute;
-    bottom: 20px;
+    top: 626px;
     left: 50%;
     margin-left: -70px;
 }
