--- a/newIndex/mall/styles/cart.css
+++ b/newIndex/mall/styles/cart.css
@@ -268,6 +268,11 @@ label.address-label{color: grey;
     cursor: pointer;
 }
 .address-choose>li>div>span{
+    width: 250px;
+    display: inline-block;
+    vertical-align: top;
+}
+.address-choose>li>div>span:first-child{
     width: 50px;
     display: inline-block;
 }
@@ -284,7 +289,7 @@ label.address-label{color: grey;
     width: 382px;
     margin:10px;
     position: relative;
-    height: 95px;
+    height: 110px;
 }
 .address-choose>li.active{
     border: 1px solid #ff0014;
@@ -293,13 +298,13 @@ label.address-label{color: grey;
 .icon-edit-adjust{
     position: absolute;
     right: 20px;
-    top: 29px;
+    top: 38px;
     font-size: 12px;
 }
 .icon-remove-adjust{
     position: absolute;
     right: 20px;
-    top: 53px;
+    top: 64px;
     font-size: 12px;
 }
 .un-success{
