--- a/weixinApp/present/css/base.css
+++ b/weixinApp/present/css/base.css
@@ -214,6 +214,7 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
     margin:0 auto;
     max-width: 45rem;
     padding-top: 9rem;
+    margin-bottom: 6rem;
 }
 /* button */
 .m-button{
