--- a/weixinApp/present/css/layout.css
+++ b/weixinApp/present/css/layout.css
@@ -65,10 +65,6 @@
     width: 80%;
     margin:0 auto;
     max-width: 32rem;
-    position: absolute;
-    bottom: 5px;
-    left: 0;
-    right: 0;
 }
 .item-title{
     font-size: 1.8rem;
@@ -157,7 +153,7 @@
     height: 100%;
 }
 .today-hot-one{
-    background-color: #f4f4f4;
+    background-color: #fff;
     margin-top: 3rem;
     padding:0.4rem;
 }
@@ -211,10 +207,10 @@ body{
     background-size: cover;
     height: 100%;
     background-attachment:fixed;
+    margin-bottom: 6rem;
     margin-bottom:0;
 }
 .enter-app-button{
-    margin-top:4rem;
 }
 
 @media (min-width: 768px) {
