--- a/newIndex/global/styles/base.css
+++ b/newIndex/global/styles/base.css
@@ -295,6 +295,10 @@ body.specs #main { font-size: 11px; line-height: 16px; }
     height: 37px;
     width: 170px;
     cursor: pointer;
+    color: #000;
+    font-size: 13px;
+    text-align: center;
+    line-height: 37px;
     background-color: transparent;
     border: 1px solid #000;
 }
